--- a/.github/workflows/square-equation.yml
+++ b/.github/workflows/square-equation.yml
@@ -23,5 +23,5 @@ jobs:
         run: dotnet build SquareEquationLib --no-restore /p:ContinuousIntegrationBuild=true
 
       - name: Unit test and coverage
-        run: dotnet test /p:CollectCoverage=true /p:ThresholdType=line /p:Threshold=100
+        run: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura
 
